--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ziya",
-  "version": "0.4.2",
+  "version": "0.4.3",
   "description": "Your local in-browser editor",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
   "author": "",
   "license": "MIT",
   "bin": {
-    "ziya": "./src"
+    "ziya": "./src/server.js"
 	},
   "preferGlobal": "true"
 }
