--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "ziya",
-  "version": "0.4.5",
+  "version": "0.5.5",
   "description": "Your local in-browser editor",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-client": "./src/npm start"
   },
   "author": "",
   "license": "MIT",
   "bin": {
-    "ziya": "./src/server.js"
+    "ziya": "./src/server.js & npm run start-client"
 	},
   "preferGlobal": "true"
 }
