--- a/src/package.json
+++ b/src/package.json
@@ -10,6 +10,7 @@
     "express": "^4.14.0",
     "http-string-parser": "0.0.5",
     "react": "^15.3.2",
+    "react-codemirror": "^0.2.6",
     "react-dom": "^15.3.2",
     "sse": "0.0.6",
     "uuid": "^2.0.3"
