add file saving resolves #12

--- a/src/package.json
+++ b/src/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.6.1"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "http-string-parser": "0.0.5",
