--- a/src/package.json
+++ b/src/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "src",
+  "name": "ziya",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "lodash.isequal": "^4.4.0",
     "react-scripts": "0.6.1"
   },
   "dependencies": {
@@ -13,6 +14,7 @@
     "react": "^15.3.2",
     "react-codemirror": "^0.2.6",
     "react-dom": "^15.3.2",
+    "react-treebeard": "^1.1.4",
     "sse": "0.0.6",
     "uuid": "^2.0.3"
   },
