Install concurrently package to run client and server app together

--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
     "uuid": "3.0.1"
   },
   "scripts": {
+    "dev": "concurrently \"react-scripts start\" \"node server/index.js\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
