--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "ziya",
-  "version": "0.8.9",
+  "version": "0.9.0",
   "description": "Your local in-browser editor",
   "main": "index.js",
   "author": "",
   "license": "MIT",
   "bin": {
-    "ziya": "concurrently \"node server/index.js\" \"cd ./src\" \"npm run start\""
+    "ziya": "node server/index.js & cd src & npm run start"
   },
-  "preferGlobal": "true",
-  "dependencies": {
-    "concurrently": "^3.1.0"
-  }
+  "dependencies": {},
+  "preferGlobal": "true"
 }
