--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "ziya",
-  "version": "0.9.3",
+  "version": "0.9.4",
   "description": "Your local in-browser editor",
   "main": "index.js",
   "author": "",
   "license": "MIT",
+  "scripts": {
+    "start-client": "cd ./src & npm run start"
+  },
   "bin": {
     "ziya": "./src/server/index.js"
   },
@@ -18,7 +21,8 @@
     "react-dom": "15.4.2",
     "react-treebeard": "1.1.4",
     "sse": "0.0.6",
-    "uuid": "3.0.1"
+    "uuid": "3.0.1",
+    "shelljs": "0.7.6"
   },
   "preferGlobal": "true"
 }
