--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-dom": "15.4.2",
     "react-treebeard": "1.1.4",
     "sse": "0.0.6",
-    "uuid": "3.0.1",
-    "shelljs": "0.7.6"
+    "uuid": "3.0.1"
   },
   "preferGlobal": "true"
 }
