--- a/src/package.json
+++ b/src/package.json
@@ -3,8 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "lodash.isequal": "4.4.0",
-    "react-scripts": "0.8.4"
+    "autoprefixer": "6.6.1",
+    "babel-cli": "6.18.0",
+    "babel-core": "6.21.0",
+    "babel-eslint": "7.1.1",
+    "babel-loader": "6.2.10",
+    "babel-plugin-transform-object-rest-spread": "6.20.2",
+    "babel-polyfill": "6.20.0",
+    "babel-preset-es2015": "6.18.0",
+    "babel-preset-react": "6.16.0",
+    "babel-preset-stage-0": "6.16.0",
+    "css-loader": "0.26.1",
+    "eslint": "3.13.1",
+    "eslint-config-airbnb": "14.0.0",
+    "eslint-import-resolver-webpack": "0.8.0",
+    "eslint-loader": "1.6.1",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "3.0.2",
+    "eslint-plugin-react": "6.9.0",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.9.0",
+    "html-webpack-plugin": "2.26.0",
+    "json-loader": "0.5.4",
+    "lodash.isequal": "4.5.0",
+    "lodash.merge": "4.6.0",
+    "postcss-loader": "1.2.2",
+    "progress-bar-webpack-plugin": "1.9.2",
+    "react-hot-loader": "3.0.0-beta.6",
+    "rimraf": "2.5.4",
+    "source-map-loader": "0.1.6",
+    "style-loader": "0.13.1",
+    "url-loader": "0.5.7",
+    "webpack": "1.14.0",
+    "webpack-dev-server": "1.16.2",
+    "webpack-hot-middleware": "2.15.0"
   },
   "dependencies": {
     "body-parser": "1.15.2",
@@ -17,14 +49,23 @@
     "react-treebeard": "1.1.4",
     "shelljs": "0.7.6",
     "sse": "0.0.6",
-    "uuid": "3.0.1",
-    "webpack": "^1.14.0"
+    "uuid": "3.0.1"
   },
   "scripts": {
-    "dev": "concurrently \"react-scripts start\" \"node server/index.js\"",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "prebuild": "rimraf build",
+    "build": "NODE_ENV=production webpack --config config/webpack.prod.js",
+    "start:dev": "NODE_ENV=development node server/index.js",
+    "start:prod": "NODE_ENV=production node server/index.js"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-0",
+      "react"
+    ],
+    "plugins": [
+      "react-hot-loader/babel",
+      "transform-object-rest-spread"
+    ]
   }
 }
