--- a/src/package.json
+++ b/src/package.json
@@ -67,5 +67,19 @@
       "react-hot-loader/babel",
       "transform-object-rest-spread"
     ]
+  },
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "extends": "airbnb",
+    "env": {
+      "browser": true
+    },
+    "rules": {
+      "global-require": 0,
+      "import/no-extraneous-dependencies": 0,
+      "import/first": 0,
+      "no-param-reassign": 0,
+      "react/forbid-prop-types": 0
+    }
   }
 }
