--- a/src/package.json
+++ b/src/package.json
@@ -43,6 +43,7 @@
     "cors": "2.8.1",
     "express": "4.14.0",
     "http-string-parser": "0.0.5",
+    "open": "0.0.5",
     "react": "15.4.2",
     "react-codemirror": "0.3.0",
     "react-dom": "15.4.2",
