--- a/package.json
+++ b/package.json
@@ -10,15 +10,8 @@
   },
   "dependencies": {
     "body-parser": "1.15.2",
-    "cors": "2.8.1",
     "express": "4.14.0",
-    "http-string-parser": "0.0.5",
-    "react": "15.4.2",
-    "react-codemirror": "0.3.0",
-    "react-dom": "15.4.2",
-    "react-treebeard": "1.1.4",
-    "sse": "0.0.6",
-    "uuid": "3.0.1"
+    "open": "0.0.5"
   },
   "preferGlobal": "true"
 }
