--- a/src/package.json
+++ b/src/package.json
@@ -13,7 +13,9 @@
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-0": "6.16.0",
+    "commitizen": "^2.9.6",
     "css-loader": "0.26.1",
+    "cz-conventional-changelog": "^2.0.0",
     "eslint": "3.13.1",
     "eslint-config-airbnb": "14.0.0",
     "eslint-import-resolver-webpack": "0.8.0",
@@ -32,9 +34,9 @@
     "react": "15.4.2",
     "react-codemirror": "0.3.0",
     "react-dom": "15.4.2",
+    "react-hot-loader": "3.0.0-beta.6",
     "react-notification": "^6.6.0",
     "react-treebeard": "1.1.4",
-    "react-hot-loader": "3.0.0-beta.6",
     "rimraf": "2.5.4",
     "source-map-loader": "0.1.6",
     "style-loader": "0.13.1",
